Fixing regression bug 233753. Making document.createElement() create HTML elements again when called on an HTML document. r=bzbarsky@mit.edu, sr=dbaron@dbaron.org